--- a/config.json
+++ b/config.json
@@ -6,38 +6,8 @@
   "ColorService": "https://pic.superbed.cc/item/671c5c10fa9f77b4dc629ff6.jpg",
   "BleachingService": "https://pic.superbed.cc/item/67254711fa9f77b4dc77100b.jpg",
   "Hair extensionService": "https://pic.superbed.cc/item/671c5c18fa9f77b4dc62a095.jpg",
-  "HomeSwiper1": "https://pic.superbed.cc/item/67259070fa9f77b4dc79f0dc.jpg",
-  "HomeSwiper2": "https://pic.superbed.cc/item/67259068fa9f77b4dc79f0a7.jpg",
-  "HomeSwiper3": "https://pic.superbed.cc/item/67259060fa9f77b4dc79f03f.jpg",
-  "HomeSwiper4": "https://pic.superbed.cc/item/6725902ffa9f77b4dc79e7d6.jpg",
-  "HomeSwiper5": "https://pic.superbed.cc/item/67258ff3fa9f77b4dc79d5d6.jpg",
-  "HomeSwiper6": "https://pic.superbed.cc/item/67259003fa9f77b4dc79db3f.jpg",
-  "HomeSwiper7": "https://pic.superbed.cc/item/6725900ffa9f77b4dc79de65.jpg",
-  "HomeSwiper8": "https://pic.superbed.cc/item/67259016fa9f77b4dc79e05e.jpg",
-  "HomeSwiper9": "https://pic.superbed.cc/item/6725901ffa9f77b4dc79e326.jpg",
-  "HomeSwiper10": "https://pic.superbed.cc/item/67259057fa9f77b4dc79efd6.jpg",
-  "HomeSwiper11": "https://pic.superbed.cc/item/672590adfa9f77b4dc79f348.jpg",
-  "HomeSwiper12": "https://pic.superbed.cc/item/672590adfa9f77b4dc79f340.jpg",
-  "HomeSwiper13": "https://pic.superbed.cc/item/672590adfa9f77b4dc79f348.jpg",
-  "HomeSwiper14": "https://pic.superbed.cc/item/672590adfa9f77b4dc79f354.jpg",
-  "HomeSwiper15": "https://pic.superbed.cc/item/672590adfa9f77b4dc79f360.jpg",
-  "HomeImage1": "https://pic.superbed.cc/item/671c66bdfa9f77b4dc62ffd6.jpg",
-  "HomeHaircutMen": "https://pic.superbed.cc/item/67259155fa9f77b4dc7a0cf9.jpg",
-  "HomeHaircutWomen": "https://pic.superbed.cc/item/67259156fa9f77b4dc7a0d0a.jpg",
-  "HomeHaircutKid": "https://pic.superbed.cc/item/67259155fa9f77b4dc7a0cec.jpg",
-  "HomeHaircutSenior": "https://pic.superbed.cc/item/67259156fa9f77b4dc7a0d0a.jpg",
-  "Discount": "https://pic.superbed.cc/item/6725a3f6fa9f77b4dc9c625c.jpg",
-  "BarberSwiper1": "https://pic.superbed.cc/item/6725907afa9f77b4dc79f146.jpg",
-  "BarberSwiper2": "https://pic.superbed.cc/item/67259070fa9f77b4dc79f0dc.jpg",
-  "BarberSwiper3": "https://pic.superbed.cc/item/67259068fa9f77b4dc79f0a7.jpg",
-  "BarberSwiper4": "https://pic.superbed.cc/item/67259060fa9f77b4dc79f03f.jpg",
-  "BarberSwiper5": "https://pic.superbed.cc/item/6725902ffa9f77b4dc79e7d6.jpg",
-  "BarberSwiper6": "https://pic.superbed.cc/item/67258ff3fa9f77b4dc79d5d6.jpg",
-  "BarberSwiper7": "https://pic.superbed.cc/item/67259003fa9f77b4dc79db3f.jpg",
-  "BarberSwiper8": "https://pic.superbed.cc/item/6725900ffa9f77b4dc79de65.jpg",
-  "BarberSwiper9": "https://pic.superbed.cc/item/67259016fa9f77b4dc79e05e.jpg",
-  "BarberSwiper10": "https://pic.superbed.cc/item/6725901ffa9f77b4dc79e326.jpg",
-  "BarberSwiper11": "https://pic.superbed.cc/item/67259057fa9f77b4dc79efd6.jpg",
+  "side_bg": "https://pic.superbed.cc/item/671c66bdfa9f77b4dc62ffd6.jpg",
+  "discount": "https://pic.superbed.cc/item/671c6fc7fa9f77b4dc63815d.jpg",
   "Navbar1": "Asian Salon",
   "Navbar2": "Contact",
   "Navbar3": "Services",
@@ -46,8 +16,6 @@
   "Navbar51": "Professional Appointment",
   "Navbar52": "Phone Appointment",
   "Navbar53": "Email Appointment",
-  "ProfessionalLink": "https://asianbeautysalon.setmore.com/",
-  "EmailLink": "mailto:weixinzhao46@gmail.com?subject=Appointment Request&body=I would like to book an appointment.",
   "HomeH1": "Welcome to Asian Beauty Salon!",
   "HomeP1": "Asian Beauty Salon is your destination for exceptional hair services, blending style and precision in every cut, color, and treatment. Our skilled stylists provide personalized care, ensuring you leave with a look that’s uniquely yours and a refreshing experience every time.",
   "HomeH2": "Experience Elegance and Expertise at Asian Beauty Salon",
@@ -55,12 +23,14 @@
   "HomeH3": "Asian Beauty Salon",
   "HomeH4": "611 E Grand River Ave #200, East Lansing, MI 48823",
   "HomeP3": "Book your appointment or visit us at our location!",
+  "HomeImage1":"https://pic.superbed.cc/item/671c66bdfa9f77b4dc62ffd6.jpg",
   "ContactH1": "Contact Us",
   "Address": "Address: 123 Barbershop St, City, Country",
   "Phone": "917-285-4241",
   "ServiceH1": "Our Services & Price list",
-  "BarbersH1": "Our Stylists",
-  "BarbersH2": "Our Work",
+  "BarbersH1": "Our stylists",
   "GoogleMapAPI": "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2930.6054423363025!2d-84.47846268749686!3d42.73324117104036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8822e920ca8cbe01%3A0x7be6b1912c338548!2sAsian%20Beauty%20Salon%2C%20Inc.!5e0!3m2!1sen!2sus!4v1729915077890!5m2!1sen!2sus",
-  "NavigationLink": "https://maps.google.com/maps/dir//Asian+Beauty+Salon,+Inc.+611+E+Grand+River+Ave+%23200+East+Lansing,+MI+48823/@42.7332412,-84.4758824,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x8822e920ca8cbe01:0x7be6b1912c338548"
+  "NavigationLink": "https://maps.google.com/maps/dir//Asian+Beauty+Salon,+Inc.+611+E+Grand+River+Ave+%23200+East+Lansing,+MI+48823/@42.7332412,-84.4758824,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x8822e920ca8cbe01:0x7be6b1912c338548",
+  "ProfessionalLink":"https://asianbeautysalon.setmore.com/weixin",
+  "EmailLink":"mailto:weixinzhao46@gmail.com?subject=Appointment Request&body=I would like to book an appointment."
 }
